--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -61,18 +61,18 @@
                 margin: 0 auto 1rem;
                 border-radius: $border-radius-sm;
                 @include md {
-                    // justify-content: center;
-                    // gap: 10vw;
+                    justify-content: flex-start;
+                    gap: 5vw;
                     // margin: 5vh auto;
-                    position: absolute;
-                    flex-direction: column;
-                    gap: 5vh;
-                    top: -15vh;
-                    right: 5vw;
+                    // position: absolute;
+                    // flex-direction: column;
+                    // gap: 5vh;
+                    // top: -15vh;
+                    // right: 5vw;
                 }
-                @include xlg {
-                    right: 20vw;
-                }
+                // @include xlg {
+                //     right: 20vw;
+                // }
 
                 svg {
                     // width: 100%;
@@ -704,6 +704,65 @@
             }
         }
         // end of figure hover state
+    }
+}
+
+.skill-section-container {
+    // border: 2px solid purple;
+    @include md {
+        margin-top: 10vh;
+    }
+}
+
+.skill-section {
+    // border: 3px solid yellow;    
+    padding: 5vh 5vw;
+    min-height: 100vh;
+    background: $overlay-blue-darker;
+    color: #fff;
+    p {
+        color: inherit;
+        &::first-letter {
+            text-transform: capitalize;
+        }
+    }
+
+    .skill-section-title {
+        // border: 1px solid red;
+        margin-bottom: 5vh;
+        h3 {
+            text-transform: capitalize;
+            // line-height: 1.5;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+    }
+
+    .skill-section-content {
+        // border: 1px solid blue;
+        background: $overlay-blue-darkest;
+        border-radius: .25rem;
+        padding: 1rem .5rem;
+        i {
+            font-size: 4rem;
+            margin-bottom: .25rem;
+            position: relative;
+            // top: -5vh;
+        }
+        h4 {
+            text-transform: capitalize;
+            margin-bottom: .5rem;
+            font-weight: bold;
+            font-size: 1.15rem;
+        }
+        
+        ul {
+            margin-top: 1rem;
+            li {
+                margin-bottom: .5rem;
+                text-transform: capitalize;
+            }
+        }
     }
 }
 // end of skills
