--- a/css/style.css
+++ b/css/style.css
@@ -2430,7 +2430,7 @@ hamburger
 .skill-section {
   padding: 5vh 5vw;
   min-height: 100vh;
-  background: #20262e;
+  background: #29323c;
   color: #fff;
 }
 .skill-section p {
@@ -2440,31 +2440,32 @@ hamburger
   text-transform: capitalize;
 }
 .skill-section .skill-section-title {
-  margin-bottom: 5vh;
+  margin-bottom: 10vh;
 }
 .skill-section .skill-section-title h3 {
   text-transform: capitalize;
+  line-height: 1.5;
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 .skill-section .skill-section-content {
   background: #15191e;
   border-radius: 0.25rem;
-  padding: 1rem 0.5rem;
+  padding: 0.5rem 0.5rem 1rem;
+}
+.skill-section .skill-section-content .skill-title {
+  position: relative;
+  top: -5vh;
 }
 .skill-section .skill-section-content i {
   font-size: 4rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
   position: relative;
 }
 .skill-section .skill-section-content h4 {
   text-transform: capitalize;
-  margin-bottom: 0.5rem;
   font-weight: bold;
   font-size: 1.15rem;
-}
-.skill-section .skill-section-content ul {
-  margin-top: 1rem;
 }
 .skill-section .skill-section-content ul li {
   margin-bottom: 0.5rem;
