--- a/css/style.css
+++ b/css/style.css
@@ -2428,9 +2428,8 @@ hamburger
 }
 
 .skill-section {
-  padding: 5vh 5vw;
-  min-height: 100vh;
-  background: #29323c;
+  padding-bottom: 10vh;
+  background: #15191e;
   color: #fff;
 }
 .skill-section p {
@@ -2441,17 +2440,96 @@ hamburger
 }
 .skill-section .skill-section-title {
   margin-bottom: 10vh;
+  padding: 5vh 5vw;
+  position: relative;
+  isolation: isolate;
+  height: 75vh;
+  background: #20262e;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title {
+    padding: 10vh 5vw;
+    height: 90vh;
+  }
+}
+.skill-section .skill-section-title::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title::after {
+    background-attachment: fixed;
+  }
 }
 .skill-section .skill-section-title h3 {
   text-transform: capitalize;
   line-height: 1.5;
   font-size: 1.5rem;
+  font-size: clamp(1.5rem, 5vw, 2rem);
   margin-bottom: 1rem;
 }
+.skill-section .skill-section-title p {
+  width: 70%;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title p {
+    width: 40%;
+    font-size: 1.15rem;
+  }
+}
+.skill-section .skill-section-title.section-title-1::after {
+  background-image: url("../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg");
+  background-position: 20%;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+  mix-blend-mode: overlay;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title.section-title-1::after {
+    background-position: 10% 10%;
+  }
+}
+.skill-section .skill-section-title.section-title-2::after {
+  background-image: url("../img/anaya-katlego-ZWQduAnJ8cg-unsplash.jpg");
+  background-position: 20% 30%;
+  background-position: 70%;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+  mix-blend-mode: overlay;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title.section-title-2::after {
+    background-position: top;
+  }
+}
 .skill-section .skill-section-content {
-  background: #15191e;
-  border-radius: 0.25rem;
+  margin: 5vh 5vw;
+  display: grid;
+  gap: 10vh;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-content {
+    grid-template-columns: 1fr 1fr;
+    margin: 10vh 5vw;
+  }
+}
+@media (min-width: 1024px) {
+  .skill-section .skill-section-content {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.skill-section .skill-section-content .skill-article {
   padding: 0.5rem 0.5rem 1rem;
+  border-radius: 0.25rem;
+  background: #29323c;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 26, 0.5);
 }
 .skill-section .skill-section-content .skill-title {
   position: relative;
@@ -2470,6 +2548,9 @@ hamburger
 .skill-section .skill-section-content ul li {
   margin-bottom: 0.5rem;
   text-transform: capitalize;
+}
+.skill-section .skill-section-content ul li::marker {
+  color: #29323c;
 }
 
 #contact .contact {
