--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -716,9 +716,10 @@
 
 .skill-section {
     // border: 3px solid yellow;    
-    padding: 5vh 5vw;
-    min-height: 100vh;
-    background: $overlay-blue-dark;
+    // padding: 5vh 5vw;
+    padding-bottom: 10vh;
+    // min-height: 100vh;
+    background: $overlay-blue-darkest;
     color: #fff;
     p {
         color: inherit;
@@ -730,19 +731,94 @@
     .skill-section-title {
         // border: 1px solid red;
         margin-bottom: 10vh;
+        padding: 5vh 5vw;
+        position: relative;
+        isolation: isolate;
+        height: 75vh;
+        background: $overlay-blue-darker;
+        @include md {
+            padding: 10vh 5vw;
+            height: 90vh;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            @include md {
+                background-attachment: fixed;
+                // height: 100vh;
+            }
+        }
+
         h3 {
             text-transform: capitalize;
             line-height: 1.5;
             font-size: 1.5rem;
+            font-size: clamp(1.5rem, 5vw, 2rem);
             margin-bottom: 1rem;
+        }
+        p {
+            width: 70%;
+            @include md {
+                width: 40%;
+                font-size: 1.15rem;
+            }
+        }
+
+        &.section-title-1 {
+            &::after {
+                background-image: url('../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg');
+                background-position: 20% ;
+                background-size: contain;
+                background-size: cover;
+                background-repeat: no-repeat;
+                mix-blend-mode: overlay;
+                @include md {
+                    background-position: 10% 10%;
+                    // background-size: 80%;
+                }
+            }
+        }
+        &.section-title-2 {
+            &::after {
+                background-image: url('../img/anaya-katlego-ZWQduAnJ8cg-unsplash.jpg');
+                background-position: 20% 30%;
+                background-position: 70%;
+                background-size: contain;
+                background-size: cover;
+                background-repeat: no-repeat;
+                mix-blend-mode: overlay;
+                @include md {
+                    background-position: top ;
+                }
+            }
         }
     }
 
     .skill-section-content {
         // border: 1px solid blue;
-        background: $overlay-blue-darkest;
-        border-radius: .25rem;
-        padding: .5rem .5rem 1rem;
+        margin: 5vh 5vw;
+        display: grid;
+        gap: 10vh;
+        
+        @include md {
+            grid-template-columns: 1fr 1fr;
+            margin: 10vh 5vw;
+        }
+        @include xlg {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        .skill-article {
+            padding: .5rem .5rem 1rem;
+            border-radius: .25rem;
+            background: $overlay-blue-dark;
+            box-shadow: 0 .5rem 1rem hsla(240, 100%, 5%, .5);
+            // border: 2px solid red;
+        }
 
         .skill-title {
             // border: 2px solid red;
@@ -767,6 +843,9 @@
             li {
                 margin-bottom: .5rem;
                 text-transform: capitalize;
+                &::marker {
+                    color: $overlay-blue-dark;
+                }
             }
         }
     }
