--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -829,6 +829,7 @@
             font-size: 4rem;
             margin-bottom: .5rem;
             position: relative;
+            filter: drop-shadow(0rem .5rem .25rem hsla(240, 100%, 5%, .5));
             // top: -5vh;
         }
         h4 {
