--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -844,6 +844,7 @@
             li {
                 margin-bottom: .5rem;
                 text-transform: capitalize;
+                font-size: .95rem;
                 &::marker {
                     color: $overlay-blue-dark;
                 }
