--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -721,6 +721,15 @@
     // min-height: 100vh;
     background: $overlay-blue-darkest;
     color: #fff;
+    &.light-section {
+        background: #f4f4f4;
+        color: $overlay-blue-darker;
+        .skill-section-content {
+            .skill-article {
+                background: #fff;
+            }
+        }
+    }
     p {
         color: inherit;
         &::first-letter {
@@ -797,6 +806,25 @@
                 }
             }
         }
+        &.section-title-3 {
+            background: #fafafa;
+            &::after {
+                background-image: url('../img/markus-winkler-UP_RojtnvTU-unsplash.jpg');
+                // background-image: url('../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg');
+                background-position: 70% bottom;
+                background-position: 20% 30%;
+                background-size: contain;
+                background-size: cover;
+                background-repeat: no-repeat;
+                mix-blend-mode: darken;
+                // opacity: .7;
+                @include md {
+                    background-position: bottom right;
+                    background-position: right;
+                    background-size: contain;
+                }
+            }
+        }
     }
 
     .skill-section-content {
@@ -816,7 +844,7 @@
             padding: .5rem .5rem 1rem;
             border-radius: .25rem;
             background: $overlay-blue-dark;
-            box-shadow: 0 .5rem 1rem hsla(240, 100%, 5%, .2);
+            box-shadow: 0 .5rem 1rem hsla(240, 100%, 5%, .1);
             // border: 2px solid red;
         }
 
@@ -829,7 +857,7 @@
             font-size: 4rem;
             margin-bottom: .5rem;
             position: relative;
-            filter: drop-shadow(0rem .5rem .25rem hsla(240, 100%, 5%, .25));
+            filter: drop-shadow(0rem .5rem .25rem hsla(240, 100%, 5%, .15));
             // top: -5vh;
         }
         h4 {
