--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -744,7 +744,7 @@
         position: relative;
         isolation: isolate;
         height: 80vh;
-        background: $overlay-blue-darker;
+        background: $overlay-blue-dark;
         @include md {
             padding: 10vh 5vw;
             height: 90vh;
