--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -720,7 +720,7 @@
     // padding: 5vh 5vw;
     padding-bottom: 10vh;
     // min-height: 100vh;
-    background: $overlay-blue-dark;
+    background: $overlay-blue-darkest;
     color: #fff;
     &.light-section {
         background: #f4f4f4;
@@ -873,7 +873,7 @@
             padding: .5rem .5rem 1rem;
             padding: 1rem;
             border-radius: .25rem;
-            background: $overlay-blue-darkest;
+            background: $overlay-blue-dark;
             box-shadow: 0 .5rem 1rem hsla(240, 100%, 5%, .1);
             transition: .25s;
             // border: 2px solid red;
@@ -907,7 +907,7 @@
                     text-transform: capitalize;
                     font-size: .95rem;
                     list-style: none;
-                    border-bottom: 1px solid $overlay-blue-light;
+                    border-bottom: 1px solid $overlay-blue-darkest;
 
                     &::marker {
                         color: $overlay-blue-dark;
@@ -928,11 +928,13 @@
                         filter: drop-shadow(0rem .25rem .15rem hsla(240, 100%, 10%, .25));
                     }
 
-                    ul {
-                        li {
-                            &::marker {
-                                color: transparent;
-                            }
+                }
+                ul {
+                    li {
+                        border-color: $overlay-blue-light;
+                        transition: .5s;
+                        &::marker {
+                            color: transparent;
                         }
                     }
                 }
