--- a/css/style.css
+++ b/css/style.css
@@ -2449,24 +2449,23 @@ hamburger
   isolation: isolate;
   height: 80vh;
   background: #29323c;
+  background: linear-gradient(140deg, yellow 20%, red);
+  background: linear-gradient(140deg, #15191e 20%, transparent);
 }
 @media (min-width: 768px) {
   .skill-section .skill-section-title {
-    padding: 10vh 5vw;
-    height: 90vh;
+    padding: 20vh 5vw 10vh;
+    height: 85vh;
+    background: linear-gradient(140deg, #20262e 20%, #29323c);
   }
-}
-.skill-section .skill-section-title::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-@media (min-width: 768px) {
   .skill-section .skill-section-title::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
     background-attachment: fixed;
   }
 }
@@ -2490,8 +2489,46 @@ hamburger
     font-size: 1.15rem;
   }
 }
-.skill-section .skill-section-title.section-title-1::after {
-  background-image: url("../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg");
+.skill-section .skill-section-title img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title img {
+    display: none;
+  }
+}
+.skill-section .skill-section-title.section-title-1 img {
+  background-position: 20%;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+  mix-blend-mode: overlay;
+  opacity: 0.2;
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title.section-title-1 img {
+    background-position: 10% 10%;
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .skill-section .skill-section-title.section-title-1::after {
+    background-image: url("../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg");
+    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    mix-blend-mode: overlay;
+    background-position: 10% 10%;
+    opacity: 0.5;
+  }
+}
+.skill-section .skill-section-title.section-title-2 img {
   background-position: 20%;
   background-size: contain;
   background-size: cover;
@@ -2499,63 +2536,56 @@ hamburger
   mix-blend-mode: overlay;
 }
 @media (min-width: 768px) {
-  .skill-section .skill-section-title.section-title-1::after {
+  .skill-section .skill-section-title.section-title-2 img {
     background-position: 10% 10%;
   }
 }
-.skill-section .skill-section-title.section-title-2::after {
-  background-image: url("../img/anaya-katlego-ZWQduAnJ8cg-unsplash.jpg");
-  background-position: 20% 30%;
-  background-position: 70%;
-  background-size: contain;
-  background-size: cover;
-  background-repeat: no-repeat;
-  mix-blend-mode: overlay;
-}
 @media (min-width: 768px) {
   .skill-section .skill-section-title.section-title-2::after {
-    background-position: top;
+    background-image: url("../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg");
+    background-position: center;
+    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    mix-blend-mode: overlay;
   }
 }
 .skill-section .skill-section-title.section-title-3 {
-  background: #fff8;
-  height: 75vh;
+  background: #f4f4f4;
 }
-.skill-section .skill-section-title.section-title-3::after {
-  background-image: url("../img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg");
-  background-position: 70% bottom;
-  background-position: 20% 30%;
+.skill-section .skill-section-title.section-title-3 img {
+  background-position: 20%;
   background-size: contain;
   background-size: cover;
   background-repeat: no-repeat;
   mix-blend-mode: overlay;
+  mix-blend-mode: darken;
+  opacity: 0.4;
 }
 @media (min-width: 768px) {
   .skill-section .skill-section-title.section-title-3::after {
-    background-position: bottom right;
-    background-position: right;
+    background-image: url("../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg");
     background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    mix-blend-mode: overlay;
+    background-position: right;
   }
 }
 .skill-section .skill-section-title.section-title-4 {
-  background: #fafafa;
   background: #fff7;
-  height: 70vh;
 }
-.skill-section .skill-section-title.section-title-4::after {
-  background-image: url("../img/markus-winkler-UP_RojtnvTU-unsplash.jpg");
-  background-position: 70% bottom;
-  background-position: 30% 30%;
-  background-size: contain;
-  background-size: cover;
-  background-repeat: no-repeat;
+.skill-section .skill-section-title.section-title-4 img {
+  object-position: 20%;
   mix-blend-mode: overlay;
 }
 @media (min-width: 768px) {
   .skill-section .skill-section-title.section-title-4::after {
+    background-image: url("../img/giorgio-trovato-8krX0HkXw8c-unsplash.jpg");
     background-position: bottom right;
-    background-position: right;
-    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: cover;
   }
 }
 .skill-section .skill-section-content {
