&.light-section color

--- a/css/style.css
+++ b/css/style.css
@@ -2652,7 +2652,7 @@ hamburger
 }
 .skill-section.light-section {
   background: #f4f4f4;
-  color: #15191e;
+  color: #29323c;
 }
 .skill-section.light-section .skill-section-title p {
   font-weight: 500;
