--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -970,7 +970,7 @@
 
     &.light-section {
         background: #f4f4f4;
-        color: $overlay-blue-darkest;
+        color: $overlay-blue-dark;
         .skill-section-title {
             p {
                 font-weight: 500;
