--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -796,7 +796,7 @@
                 background-size: cover;
                 background-repeat: no-repeat;
                 mix-blend-mode: overlay;
-                opacity: .5;
+                opacity: .4;
                 @include md {
                     background-position: 10% 10%;
                     // background-size: 80%;
@@ -819,9 +819,9 @@
         &.section-title-2 {
             img {
                 // border: 3px solid yellow;
-                background-position: 20%;
-                background-size: contain;
+                background-position: right top;
                 background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
                 mix-blend-mode: overlay;
                 // opacity: .2;
