--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -719,6 +719,7 @@
     // border: 3px solid yellow;    
     // padding: 5vh 5vw;
     padding-bottom: 10vh;
+    margin-top: 5vh;
     // min-height: 100vh;
     background: $overlay-blue-darkest;
     color: #fff;
