--- a/css/style.css
+++ b/css/style.css
@@ -2449,6 +2449,7 @@ hamburger
   .skill-section .skill-section-title {
     padding: 20vh 5vw 10vh;
     height: 85vh;
+    height: 100vh;
     background: linear-gradient(140deg, #20262e 20%, #29323c);
   }
   .skill-section .skill-section-title::after {
@@ -2533,8 +2534,11 @@ hamburger
   }
 }
 @media (min-width: 768px) {
+  .skill-section .skill-section-title.section-title-2 {
+    height: 100vh;
+  }
   .skill-section .skill-section-title.section-title-2::after {
-    background-image: url("../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg");
+    background-image: url("../img/wesson-wang-y0_vFxOHayg-unsplash.jpg");
     background-position: center;
     background-size: contain;
     background-size: cover;
@@ -2560,24 +2564,33 @@ hamburger
     background-size: contain;
     background-size: cover;
     background-repeat: no-repeat;
+    mix-blend-mode: darken;
     mix-blend-mode: overlay;
     background-position: right;
   }
 }
 .skill-section .skill-section-title.section-title-4 {
-  background: #fff7;
+  background: #fafafa;
 }
 .skill-section .skill-section-title.section-title-4 img {
-  object-position: 20%;
+  object-position: 5% 95%;
+  object-position: center;
   mix-blend-mode: overlay;
+  mix-blend-mode: darken;
 }
 @media (min-width: 768px) {
+  .skill-section .skill-section-title.section-title-4 {
+    background: #f4f4f4;
+  }
   .skill-section .skill-section-title.section-title-4::after {
-    background-image: url("../img/giorgio-trovato-8krX0HkXw8c-unsplash.jpg");
+    background-image: url("../img/ron-mcclenny-O7oOcJwfOQ4-unsplash.jpg");
     background-position: bottom right;
+    background-position: center;
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: right;
     background-size: cover;
+    background-size: 55%;
+    mix-blend-mode: darken;
   }
 }
 .skill-section .skill-section-content {
