--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ hamburger
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  padding: 0.5rem 5vw;
+  padding: 0.25rem 5vw;
   transform: translateY(15vh);
   transition: 1s;
 }
@@ -384,31 +384,31 @@ hamburger
   display: grid;
   place-items: center;
   place-content: center;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   opacity: 0;
   transition: 0.25s;
   position: relative;
   transform: translateY(1rem);
-}
-.bottom-nav .link-item i {
-  font-size: 1rem;
-  font-weight: 700;
-  color: #fff9;
-  transition: 0.25s;
 }
 .bottom-nav .link-item a {
   color: #f4f4f4;
   font-size: 0.75rem;
   text-transform: capitalize;
   display: grid;
+  place-content: center;
   place-items: center;
   transition: 0.25s;
 }
 .bottom-nav .link-item a i {
-  display: block;
-  margin-bottom: 0.25rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: #fff9;
+  transition: 0.25s;
 }
 @media (max-width: 768px) {
+  .bottom-nav .link-item:active {
+    background: #485563;
+  }
   .bottom-nav .link-item:active i {
     color: #f4f4f4;
   }
@@ -416,6 +416,9 @@ hamburger
 @media (min-width: 768px) {
   .bottom-nav .link-item {
     transform: scale(1.05);
+  }
+  .bottom-nav .link-item:hover {
+    background: #485563;
   }
   .bottom-nav .link-item:hover i {
     color: #ead2a1;
@@ -429,15 +432,6 @@ hamburger
   transform: translateY(0);
   opacity: 1;
   transition: 0.5s;
-}
-.bottom-nav.active-bottom-nav .link-item:nth-child(1) {
-  transition-delay: 0.25s;
-}
-.bottom-nav.active-bottom-nav .link-item:nth-child(2) {
-  transition-delay: 0.35s;
-}
-.bottom-nav.active-bottom-nav .link-item:nth-child(3) {
-  transition-delay: 0.45s;
 }
 
 .skip-link {
