--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -411,7 +411,7 @@ hamburger
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    padding: .5rem 5vw;
+    padding: .25rem 5vw;
     transform: translateY(15vh);
     transition: 1s;
 
@@ -423,48 +423,50 @@ hamburger
         display: grid;
         place-items: center;
         place-content: center;
-        border-radius: .25rem;
+        border-radius: .5rem;
         // padding: .15rem;
-        
+
         opacity: 0;
         transition: .25s;
         position: relative;
         transform: translateY(1rem);
-
-        i {
-            font-size: 1rem;
-            font-weight: 700;
-            color: $light-span;
-            transition: .25s;
-        }
 
         a {
             color: $text-light;
             font-size: .75rem;
             text-transform: capitalize;
             display: grid;
+            place-content: center;
             place-items: center;
             transition: .25s;
 
+            // border: 2px solid red;
+            // width: 100%;
             i {
-                display: block;
-                margin-bottom: .25rem;
+                font-size: 1.25rem;
+                font-weight: 700;
+                color: $light-span;
+                transition: .25s;
             }
         }
 
         // LINK ITEM HOVER STATE 
-        
 
         @media (max-width: 768px) {
             &:active {
+                background: $overlay-blue-light;
                 i {
                     color: $text-light;
                 }
             }
         }
+
         @media (min-width: 768px) {
             transform: scale(1.05);
+
             &:hover {
+                background: $overlay-blue-light;
+
                 i {
                     color: $span-gold;
                     color: $text-light;
@@ -479,15 +481,15 @@ hamburger
             transform: translateY(0);
             opacity: 1;
             transition: .5s;
-            &:nth-child(1){
-                transition-delay: .25s;
-            }
-            &:nth-child(2){
-                transition-delay: .35s;
-            }
-            &:nth-child(3){
-                transition-delay: .45s;
-            }
+            // &:nth-child(1){
+            //     transition-delay: .25s;
+            // }
+            // &:nth-child(2){
+            //     transition-delay: .35s;
+            // }
+            // &:nth-child(3){
+            //     transition-delay: .45s;
+            // }
         }
     }
     
