--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -867,7 +867,7 @@
             }
         }
         &.section-title-4 {
-            background: #fafafa;
+            background: #f4f4f4;
             // border: 2px solid red;
             img {
                 // border: 2px solid blue;
@@ -875,6 +875,7 @@
                 object-position: center;
                 mix-blend-mode: overlay;
                 mix-blend-mode: darken;
+                opacity: .8;
             }
             @include md {
                 background: #f4f4f4;
